target_os = "win"
target_cpu = "x64"
is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0
enable_media_drm_storage = true
enable_widevine = true
bundle_widevine_cdm = false
ignore_missing_widevine_signing_cert = true
enable_remoting = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"
use_official_google_api_keys = false
treat_warnings_as_errors = false
clang_use_chrome_plugins = true
enable_resource_allowlist_generation = false
enable_nacl = false
disable_fieldtrial_testing_config = true
enable_ffmpeg_video_decoders = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = true
thin_lto_enable_optimizations = true
enable_hls_demuxer = true
optimize_webui = true
dcheck_always_on = false
enable_vr = true
enable_stripping = true
enable_discovery = false
use_v8_context_snapshot = true
chrome_pgo_phase = 2
enable_rust = true
enable_webui_tab_strip = true
v8_enable_fast_torque = true
exclude_unwind_tables = true
v8_enable_maglev = true
v8_enable_turboshaft_csa = true
enable_ppapi = false
enable_trace_logging = false
v8_enable_webassembly = true
v8_enable_builtins_optimization = true
init_stack_vars_zero = true
rtc_use_h264 = true
v8_enable_future = true
media_use_ffmpeg = true
enable_cros_media_app = false
rtc_build_examples = false
enable_reporting = false
enable_profiling = false
win_enable_cfg_guards = true
rtc_disable_logging = true
v8_enable_sparkplug = true
toolchain_supports_rust_thin_lto = true
